# Ark

./: .gitignore  Makefile  README.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json  reveal.rs  vite.config.ts  vitest.config.ts
.opencode/plans/: 2026-04-11-security-fixes.md
docs/plans/: 2026-04-11-error-recovery-enterprise-tests.md  2026-05-07-ark-refactor.md
e2e/: app.spec.ts
scripts/: sync-types.cjs
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_upstream.rs
src-tauri/icons/: icon.icns
src-tauri/src/: credential_store.rs  git_operations.rs  lib.rs  main.rs  models.rs  remote_ops.rs
src-tauri/test_git2/: Cargo.toml
src-tauri/test_git2/src/: main.rs
src/components/: BranchModal.vue  ChangesPanel.vue  CloneModal.vue  CommitPanel.vue  ConflictsPanel.vue  ContextMenu.vue  DiffViewer.vue  ErrorBanner.vue  HeaderBar.vue  HistoryPanel.vue  InputModal.vue  LoadingOverlay.vue  RemotesModal.vue  SettingsModal.vue  StashPanel.vue  TagsModal.vue  Toast.vue
src/components/__tests__/: HeaderBar.spec.ts  Toast.spec.ts
src/composables/: useContextMenu.ts  useKeyboardShortcuts.ts  useOperationMutex.ts  useToast.ts
src/composables/__tests__/: useContextMenu.spec.ts  useKeyboardShortcuts.spec.ts  useToast.spec.ts
src/services/: git.ts
src/services/__tests__/: git.spec.ts
src/stores/: repo.ts  settings.ts  ui.ts
src/utils/: path.ts
