[package]
name = "ark"
version = "0.1.0"
description = "A high-performance Git client built with Tauri"
authors = ["Ark Team"]
edition = "2021"

[lib]
name = "ark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
glib = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
tokio = { version = "1", features = ["full", "tracing"] }
notify = { version = "6.1", features = ["crossbeam-channel"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
once_cell = "1.19"
lru = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
